# ParnamYadak

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  README_INSTORE_ORDER_BATCH.md  README_SECURITY.md  TODO.md  config.py  create_admin.sh  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  env_example  fix_batch_created_by.py  install.sh  nginx.conf  panel_healthcheck.py  pyproject.toml  pytest.ini  requirements.txt  run.py  seed_admin.py  tailwind.config.js  test_instore_order_batch.py  test_security.py  test_security_simple.py  update_customer_types.py  راهنمای_حل_مشکل.md
app/: __init__.py  cache_manager.py  database_indexes.py  db_manager.py  decorators.py  forms.py  image_optimizer.py  models.py  query_optimizer.py  security_utils.py  session_manager.py  utils.py
app/blueprints/admin_management/: bot_settings.py  routes.py
app/blueprints/admin_management/templates/: audit_logs.html  backups.html  bot_settings.html  create_user.html  edit_user.html  users.html
app/blueprints/api/: __init__.py  routes.py
app/blueprints/auth/: routes.py
app/blueprints/bot_orders/: __init__.py  routes.py
app/blueprints/broadcast/: __init__.py  routes.py
app/blueprints/customers/: routes.py
app/blueprints/dashboard/: routes.py
app/blueprints/financial_reports/: __init__.py  routes.py
app/blueprints/instore_orders/: routes.py
app/blueprints/inventory/: __init__.py  routes.py
app/blueprints/license/: __init__.py  routes.py
app/blueprints/mechanics/: __init__.py  routes.py
app/blueprints/notifications/: __init__.py  routes.py
app/blueprints/orders/: routes.py
app/blueprints/products/: routes.py
app/blueprints/profile/: routes.py
app/blueprints/roles/: routes.py
app/blueprints/tasks/: routes.py
app/blueprints/telegram_bot/: __init__.py  routes.py
app/static/css/: pre_orders.css  style.css  tailwind.output.css
app/templates/: base.html  login.html
app/templates/admin_management/: bot_settings.html
app/templates/errors/: 400.html  404.html  500.html  generic.html
app/templates/license/: activate.html  setup.html  status.html
docs/: api.md  deployment.md  developer_guide.md
(+44 files in other folders)
